--- a/ping/templates/notes/notes.html
+++ b/ping/templates/notes/notes.html
@@ -5,7 +5,8 @@
         <h1 class="card-title">Mes notes</h1>
         <button id="add" class="add-button">AJOUTER</button>
         <section class="card-body ">
-            <form id="form-container" onsubmit="return checkForm()" method="post" action="add-notes">
+            <form id="form-container" onsubmit="return checkForm()" onreset="return clearErrors()" method="post"
+                  action="add-notes">
                 {% csrf_token %}
             </form>
             {% for note in notes %}
