--- a/ping/templates/dashboard/dashboard.html
+++ b/ping/templates/dashboard/dashboard.html
@@ -25,6 +25,13 @@
                     {% include "dashboard/donut_chart/donut_chart.html" with stats=clutch_set_ratio id="graph3" %}
                 </section>
             </section>
+
+            <!-- <section class="card stats">
+                 <h2 class="card-title">Niveau adversaires</h2>
+                 <section class="card-body">
+
+                 </section>
+             </section>-->
         </section>
     </section>
 {% endblock %}
