--- a/ping/templates/dashboard/dashboard.html
+++ b/ping/templates/dashboard/dashboard.html
@@ -26,12 +26,12 @@
                 </section>
             </section>
 
-            <!-- <section class="card stats">
-                 <h2 class="card-title">Niveau adversaires</h2>
-                 <section class="card-body">
-
-                 </section>
-             </section>-->
+            <section class="card bar-stats">
+                <h2 class="card-title">Niveau adversaires</h2>
+                <section class="card-body">
+                    {% include "dashboard/bar_chart/bar_chart.html" with stats=average_opponents %}
+                </section>
+            </section>
         </section>
     </section>
 {% endblock %}
