--- a/ping/static/styles/main.css
+++ b/ping/static/styles/main.css
@@ -369,6 +369,19 @@ input[type=number] {
     width: 100%;
 }
 
+.domain {
+    stroke: white !important;
+}
+
+.tick text {
+    fill: white !important;
+    font-size: 16px;
+}
+
+.tick line {
+    stroke: white !important;
+}
+
 @media screen and (max-width: 1100px) {
     .match {
         flex-direction: column;
